# content_evaluation

./: .dockerignore  .env.example  .gitignore  .gitmessage.txt  AGENTS.md  ARCHITECTURE.md  Content Evaluation v1 Plan.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
services/api/: .env.example  Dockerfile  pyproject.toml
services/api/scripts/: show_graph.py
services/api/src/content_evaluation/: __init__.py  config.py  logging.py
services/api/src/content_evaluation/agents/: __init__.py  registry.py
services/api/src/content_evaluation/agents/instructions/: ai_likelihood.md  audience.md  editorial.md  research.md  similarity.md  synthesis.md  value.md
services/api/src/content_evaluation/api/: dependencies.py  main.py  schemas.py
services/api/src/content_evaluation/domain/: exceptions.py  models.py
services/api/src/content_evaluation/repositories/: base.py  in_memory.py  postgres.py
services/api/src/content_evaluation/services/: anchors.py  comments.py  exporting.py  normalization.py  orchestration.py  worker.py
services/api/src/content_evaluation_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/api/tests/: test_anchors.py  test_api.py  test_comments.py  test_config.py  test_exports.py  test_extraction_provider.py  test_extraction_providers.py  test_fact_check_agent.py  test_langchain_provider.py  test_langgraph_runtime.py  test_logging.py  test_normalization.py  test_openai_provider.py  test_orchestration_heuristics.py  test_orchestration_maintenance.py  test_postgres_repository.py  test_revised_markdown_workflow.py  test_tavily_provider.py  test_worker.py
(+93 files in other folders)
