[project]
name = "content-evaluation-api"
version = "0.1.0"
description = "FastAPI backend for multi-agent content evaluation."
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "langchain-anthropic>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langgraph>=0.3.0,<1.0.0",
    "markdown-it-py>=3.0.0,<4.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "psycopg-pool>=3.3.1,<4.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "sse-starlette>=2.2.1,<3.0.0",
    "tavily-python>=0.7.26,<1.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "trafilatura>=2.1.0,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "langchain>=0.3.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "respx>=0.22.0,<1.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "content_evaluation.providers.deep_research.*"
ignore_errors = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
